cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_431.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:1357: error: DEAD_STORE
  The value written to &j (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:1357:9: Write of unused value
1355.            * set bit before the end of the window
1356.            */
1357.           j = wstart;
                ^
1358.           wvalue = 1;
1359.           wend = 0;
